syntax = "proto3";

package ems;

import "google/protobuf/struct.proto";

message Empty {}

message StatusSnapshot {
  string mode = 1;
  string revision = 2;
  repeated GridStatus grids = 3;
  string metrics_endpoint = 4;
}

message GridStatus {
  string id = 1;
  repeated ControllerStatus controllers = 2;
}

message ControllerStatus {
  string id = 1;
  string role = 2;
  bool healthy = 3;
  uint64 last_heartbeat_ms = 4;
}

message CommandRequest {
  string target = 1;
  string command = 2;
  google.protobuf.Struct parameters = 3;
}

message CommandResponse {
  bool accepted = 1;
  string message = 2;
}

service StatusService {
  rpc GetStatus (Empty) returns (StatusSnapshot);
}

service CommandService {
  rpc SubmitCommand (CommandRequest) returns (CommandResponse);
}
